@@ -173,19 +173,19 @@ KunaiOBJ = [
 JobEquipItemOBJ = [
 [0,50,90,100,999], //Novice
 [0, 1, 51,101, 70, 71, 72, 74, 75,78,83,84,85,86,87,90,91,999], //Swordman
-[0, 1, 52,102, 72, 74, 75,78, 80,83,84,85,90,91,92,999], //Thief
+[0, 1, 52,102, 72, 74, 75,78, 80,83,84,85,90,91,999], //Thief
 [0, 1, 53,103, 71, 73, 74, 77,78,85,89,152,999], //Acolyte
 [0, 1, 54,104, 75, 76,83,89,999], //Archer
 [0, 1, 55,105, 71, 77,89,152,999], //Mage
 [0, 1, 56,106, 70, 71, 72, 73, 74, 75,78,83,84,85,86,90,91,999], //Merchant
 [0, 1, 51, 61,107, 70, 71, 72, 74, 75,78,79,83,84,85,86,87,90,91,999], //Knight
-[0, 1, 52, 62,108, 72, 74, 75,78,79,81,83,84,85,90,91,92,999], //Assassin
+[0, 1, 52, 62,108, 72, 74, 75,78,79,81,83,84,85,90,91,999], //Assassin
 [0, 1, 53, 63,109, 71, 73, 74, 77,78,79,81,85,89,999], //Priest
 [0, 1, 54, 64,110, 75, 76,79,80,83,88,89,999], //Hunter
 [0, 1, 55, 65,111, 71, 77,79,89,999], //Wizard
 [0, 1, 56, 66,112, 70, 71, 72, 73, 74, 75,78,79,83,84,85,86,90,91,999], //Blacksmith
 [0, 1, 51, 61,113, 70, 71, 72, 74, 75,78,79,83,84,85,86,87,90,91,999], //Crusader
-[0, 1, 52, 62,114, 72, 74, 75, 76,78,79,80,83,84,85,88,91,92,999], //Rogue
+[0, 1, 52, 62,114, 72, 74, 75, 76,78,79,80,83,84,85,88,91,999], //Rogue
 [0, 1, 53, 63,115, 71, 73, 74, 77,78,79,85,89,999], //Monk
 [0, 1, 54, 64,116, 74, 75, 76,79,83,89,999], //Bard
 [0, 1, 54, 64,117, 74, 75, 76,79,83,89,999], //Dancer
@@ -193,13 +193,13 @@ JobEquipItemOBJ = [
 [0, 1, 56, 66,119, 70, 71, 72, 73, 74, 75,78,79,83,84,85,86,90,91,999], //Alchemist
 [0,50,90,120,999], //High Novice
 [0, 1, 51, 61,107,121, 70, 71, 72, 74, 75,78,79,82,83,84,85,86,87,90,91,999], //Lord Knight
-[0, 1, 52, 62,108,122, 72, 74, 75,78,79,81,82,83,84,85,90,91,92,999], //Assassin Cross
+[0, 1, 52, 62,108,122, 72, 74, 75,78,79,81,82,83,84,85,90,91,999], //Assassin Cross
 [0, 1, 53, 63,109,123, 71, 73, 74, 77,78,79,81,82,85,89,151,152,999], //High Priest
 [0, 1, 54, 64,110,124, 75, 76,79,80,82,83,88,89,999], //Sniper
 [0, 1, 55, 65,111,125, 71, 77,79,82,89,151,152,999], //High Wizard
 [0, 1, 56, 66,112,126, 70, 71, 72, 73, 74, 75,78,79,82,83,84,85,86,90,91,999], //Whitesmith
 [0, 1, 51, 61,113,127, 70, 71, 72, 74, 75,78,79,82,83,84,85,86,87,90,91,999], //Paladin
-[0, 1, 52, 62,114,128, 72, 74, 75, 76,78,79,80,82,83,84,85,88,91,92,999], //Stalker
+[0, 1, 52, 62,114,128, 72, 74, 75, 76,78,79,80,82,83,84,85,88,91,999], //Stalker
 [0, 1, 53, 63,115,129, 71, 73, 74,77,78,79,82,85,89,152,999], //Champion
 [0, 1, 54, 64,116,130, 74, 75, 76,79,82,83,89,153,999], //Clown
 [0, 1, 54, 64,117,131, 74, 75, 76,79,82,83,89,153,999], //Gypsy
