@@ -920,7 +920,7 @@ ItemOBJ = [
 ,[897,1,0,120,3,0,0,80,"Brave Assassin Damascus","","<b>[Rogue Class]</b><br>MATK + 15%<br>Add 10% more damage with [Backstab] and [Raid]<br><b>[Ninja Class]</b><br>MATK + 15%<br>CRIT + 20<br>10% more damage with Critical Hits<br><b>[Soul Linker]</b><br>CRIT + 50",1,2,2,2,37,75,307,20,194,1,0]
 ,[898,1,0,120,3,0,0,80,"Valorous Assassin Damascus","","<b>[Ninja Class, Rogue or Stalker]</b><br>MATK + 15%<br/>When using magic, there is a 3% chance that you will add MATK + 10% and ASPD + 20% for 6 seconds.",1,2,2,3,12,5,8,15,37,75,73,5,194,1,0]
 ,[899,2,0,115,3,0,0,80,"Valorous Gladiator Blade","",0,1,1,5,1,37,75,307,20,194,1,0]
-,[900,2,0,140,3,0,0,80,"Brave Gladiator Blade","[Rogue/Stalker or Crusader/Paladin] MATK + 5%.",0,1,1,5,3,37,75,89,15,194,1,0]
+,[900,2,0,140,3,0,0,80,"Brave Gladiator Blade","","[Rogue/Stalker or Crusader/Paladin] MATK + 5%.",1,1,5,3,37,75,89,15,194,1,0]
 ,[901,3,0,230,3,0,0,80,"Valorous Assaulter's Katzbalger","",0,10,25,37,80,70,20,194,1,0]
 ,[902,3,0,230,3,0,0,80,"Brave Assaulter's Katzbalger","","2% chance on physical attacks to cast [Concentration] or [Aura Blade] Lv 1 or highest level learned",1,2,37,80,307,20,194,1,0]
 ,[903,4,0,60,3,0,0,80,"Assaulter Spear","","<b>[Crusader or Paladin]</b><br>Increases attack speed by 20%",1,2,37,95,307,20,194,1,0]
@@ -999,7 +999,7 @@ ItemOBJ = [
 ,[976,100,0,0,0,0,0,0,"[Combat Boots & Commander's Manteau Equip Set]",0,"",5,3,15,12,78,10,74,25,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
 ,[977,100,0,0,0,0,0,0,"[Combat Boots & Commander's Manteau Equip Set]",0,"",5,3,15,12,78,10,74,25,50,-300,51,-300,52,-300,53,-300,54,-300,55,-300,56,-300,58,-300,59,-300,0]
 ,[978,64,87,1,0,0,0,70,"Medal of Honor (Swordman)","","Add 1% chance of auto casting Stun on the enemy when attacking",89,5,8,10,13,500,14,50,0]
-,[979,64,92,1,0,0,0,70,"Medal of Honor (Thief)","","Add 1% chance of auto casting Poison on the enemy when attacking.",87,5,89,5,9,10,13,300,14,80,0]
+,[979,64,52,1,0,0,0,70,"Medal of Honor (Thief)","","Add 1% chance of auto casting Poison on the enemy when attacking.",87,5,89,5,9,10,13,300,14,80,0]
 ,[980,64,53,1,0,0,0,70,"Medal of Honor (Acolyte)","","Add 1% chance of auto casting Silence on the enemy when attacking",87,5,89,5,19,6,13,600,0]
 ,[981,64,55,1,0,0,0,70,"Medal of Honor (Mage)","","Add 1% chance of auto casting Stone on the enemy when attacking.",87,5,89,5,19,6,13,600,0]
 ,[982,64,54,1,0,0,0,70,"Medal of Honor (Archer)","","Add 1% chance of auto casting Blind on the enemy when attacking.",87,5,89,5,10,10,13,300,14,80,0]
